--- a/blog.css
+++ b/blog.css
@@ -153,7 +153,7 @@ p {
   border-radius: 10px;
   max-width: 600px;
   margin: 0 auto;
-  padding: 5%;
+  padding: 15%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -510,7 +510,30 @@ p {
     flex-direction: column;
     gap: 10px;
   }
+p{
+  padding: 0% 5% 0% 5%;
+  font-size: 0.7rem;
+  margin: 10px 0;
+  text-align: justify;
+  font-family: "Montserrat", sans-serif;
+  
+}
+h3{
+  padding: 0% 5% 0% 5%;
+  font-size: 0.9rem;
+  margin: 0%;
+  color: #1a679e;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+}
+h2{
+  padding: 0% 5% 0% 5%;
+  font-size: 0.9rem;
+  margin: 0%;
 
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+}
   .card {
     width: 100%;
     margin: 0 auto;
@@ -548,7 +571,7 @@ p {
   }
 
   .formulario {
-    padding: 10px;
+    padding: 15%;
   }
 
   .formulario label {
@@ -557,13 +580,13 @@ p {
 
   .formulario input,
   .formulario textarea {
-    padding: 8px;
+    padding: 8px 0px 0px 3px;
     font-size: 0.8rem;
   }
 
   .formulario button {
     font-size: 0.9rem;
-    padding: 8px;
+    padding: 8px 8px 8px 8px;
   }
 
   .navbar ul {
@@ -575,8 +598,8 @@ p {
   }
 
   .navbar a {
-    width: 2rem;
-    height: 2rem;
+    width: 1rem;
+    height: 1rem;
   }
 
   .navbar a span {
@@ -593,6 +616,8 @@ p {
   .info2 {
     font-size: 0.8rem;
     margin-bottom: 10px;
+    align-items: center;
+    
   }
 
   .accordion-header {
