--- a/blog.css
+++ b/blog.css
@@ -267,6 +267,7 @@ p {
     padding: 5% 0% 5% 0%;
     flex: 1;
     font-family: "Montserrat", sans-serif;
+    align-items: center;
     
   }
 .fim{
@@ -505,7 +506,10 @@ p {
   h1 {
     font-size: 1.2rem;
   }
-
+.meu{
+  align-items: center;
+  padding: 20% 0% 3% 0%;
+}
   #container {
     flex-direction: column;
     gap: 10px;
@@ -568,6 +572,7 @@ h2{
   .logo {
     width: 30%;
     margin: 0 auto;
+    align-items: center;
   }
 
   .formulario {
@@ -617,6 +622,7 @@ h2{
     font-size: 0.8rem;
     margin-bottom: 10px;
     align-items: center;
+    padding: 0% 15% 0% 15%;
     
   }
 
@@ -627,6 +633,11 @@ h2{
 
   .accordion-body {
     font-size: 0.8rem;
+  }
+  .faq-section {
+    align-items: center;
+    padding: 0% 15% 0% 15%;
+    
   }
 }
 
