--- a/css.css
+++ b/css.css
@@ -94,6 +94,16 @@ body{
   display: flex;
   justify-content: center;
 }
+ p.bannerin1{
+  font-size: 2rem;
+  font-family: "Montserrat", sans-serif;
+  color: #151620;
+  text-decoration-color: #151620;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
  h2.tituloprincipal2{
   font-size: 2rem;
   font-family: "Montserrat", sans-serif;
@@ -666,310 +676,362 @@ body{
     line-height: 1.6;
     margin-bottom: 20px;
 }
-
-@media (max-width: 768px) {
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-  
-  }
-
-  .menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 0;
-    gap: 15px;
-  }
+@media (max-width: 320px) {
 
   .a-menu {
-    font-size: 1.2rem;
-    margin-right: 0;
-    padding: 8px 15px;
+    font-size: 0.5rem;
+    margin: 0; /* Remove margens desnecessárias */
     text-decoration: none;
-    color: #151620;
-    font-family: "Quicksand", sans-serif;
-    font-weight: bold;
-    transition: 0.3s;
-    text-align: center;
-  }
-
-  .a-menu:hover {
-    padding-left: 30px;
-    border-left: 4px solid rgba(15, 5, 1, 0.815);
-    color: #273e4e;
-  }
-
-  .logo {
-    display: inline-block;
-    width: 30%;
-    margin-bottom: 20px;
-  }
-
-  .container,
-  .wrapper {
-    width: 100%;
-    max-width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  h1.tituloprincipal,
-  p.bannerin,
-  h2.tituloprincipal2 {
-    font-size: 1rem;
-    text-align: center;
-    padding: 0 15%;
-  }
-
-  h1.tituloprincipal {
-    font-size: 2rem;
-  }
-
-  p.bannerin {
-    font-size: 1.4rem;
-  }
-
-  .principal,
-  .blo {
-    font-size: 1.1rem;
-    padding: 2%;
-    text-align: justify;
-  }
-
-  .content {
-    display: flex;
-    flex-direction: column;
+    color: #333;
+    padding: 8px 12px;
+    transition: all 0.3s ease;
     align-items: center;
-    gap: 15px;
-  }
-
-  .texto {
-    font-size: 1.2rem;
-    color: #151620;
-  }
-
-  .imagem {
-    width: 100%;
-    text-align: center;
-  }
-
-  .img1 {
-    width: 80%;
-    max-width: 300px;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
-    transition: 1s;
-  }
-
-  .img1:hover {
-    box-shadow: 0px 15px 25px #42708c;
-  }
-
-  .meublog,
-  .servicos h2 {
-    font-size: 2rem;
-  }
-
-  .cards-container {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-}
-
-.card {
-    background-color: #e7f1ff;
-    border-radius: 10px;
-    padding: 15px; /* Reduzindo o padding */
-    width: 50%;  /* Diminuindo a largura */
-    height: 50%;  /* Diminuindo a altura */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    transition: 2.2s;
     
-}
-
-.card img {
-    width: 50%; /* Diminuindo o tamanho da imagem */
-    height: 150%; /* Diminuindo a altura da imagem */
-    border-radius: 10% 10% 10% 10%;
-    margin-bottom: 15px;
-    padding: 5% 3% 0% 3%;
-}
-
-
-h2.cardh {
-  font-size: 0.3rem; /* Diminui o tamanho do título para 1rem */
-  margin-bottom: 10px;
-  font-family: "Quicksand", sans-serif;
-  color: #323a63;
+  }
+ .logo{
+  width: 20%;
+  padding: 0% 0% 0% -20%;
+  margin: 0%;
+ }
+ p.bannerin{
+  font-size: 1rem;
+  padding: 0% 25% 0% 25%;
   align-items: center;
+
+ }
+ p.bannerin1{
+  font-size: 1rem;
+  padding: 0% 20% 0% 20%;
+  align-items: center;
+
+ }
+ .imgprinc{
+  align-items: center;
+  width: 50%;
+ }
+ h1.h1text{
+  font-size: 1rem;
+  align-items: center;
+ }
+p.principal{
+  font-size: 0.9rem;
+  padding: 0%;
+  margin: 0%;
+  align-items: center;
+  flex-direction: column;
 }
+  .img1 {
+    visibility: hidden;
+  }
 
-.card p {
-    font-size: 0.8rem; /* Ajustando o tamanho da fonte */
-    color: #323a63;
-    text-align: center;
-    font-family: "Montserrat";
-    padding: 0% 5% 2% 5%;
-    font-weight: 500;
+ .tituloprincipal2, .bannerin,.cardimg, .cardtext, .h1text, .principal, .meublog,.blo ,.baixoclass, .servicos, .centro, .image-section2{
+  visibility: visible;
 }
+ .tituloprincipal2 {
+    font-size: 1rem !important; 
+    line-height: 1.3 !important;
+    padding: 0% 20% 0% 20% !important;
 
-  .cta-button {
-    background-color: #384584;
-    color: #dce4ea;
-    border: none;
-    padding: 12px 30px;
-    margin-top: 30px;
-    border-radius: 80px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.1s ease;
-    box-shadow: 0px 0px 8px 5px rgba(0, 0, 0, 0.3);
   }
 
-  .cta-button:hover {
-    background-color: #323a63;
+  .bannerin {
+    font-size: 0.8rem !important;
+    padding: 0 5% !important;
   }
 
-  .info-consulta {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 15%;
-    background-color: #242c64;
+  .oi {
+    max-width: 95% !important;
+    text-align: center !important;
   }
-
-
-
-  .navbar {
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    top: 50%;
-    left: -70%;
-    z-index: 99;
-  }
-
   .navbar ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    background-color: #b9cddd;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 10px;
-    box-shadow: 0 10px 50px rgba(5, 4, 62, 0.25);
+    padding: 0.5rem;
+    position: relative;
+    left: -70px;
+    top: 50%;
+   
   }
 
   .navbar a {
-    font-size: 1.2rem;
-    padding: 15px 20px;
-  }
-
-  .navbar a:hover {
-    background-color: #30305a;
-    box-shadow: 0px 14px 60px #0f118f;
+    width: 1rem;
+    height: 1rem;
   }
 
   .navbar a span {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
-
-  .navbar a img {
-    width: 30px;
-    height: auto;
-  }
-  /* Rodapé e formulário */
-.meio {
+h2.cardh{
+  font-size: 0.8rem !important;
+}
+p.cardtext{
+  font-size: 0.8rem !important;
+  padding: 0% 0% 5% 0%;
+}
+.card{
+  width: 50%;
+  padding: 8% 8% 0% 8%;
+  align-items: center;
+}
+.cardimg {
+  width: 100% !important;
+  height: auto !important; /* Mantém a proporção */
+  display: block; /* Evita espaços extras */
+  object-fit: contain; /* Ajusta sem cortar */
+  align-items: center;
+}
+.cta-button {
+  width: 50%; /* Mais largo em telas pequenas */
+  font-size: 0.8rem;
+  padding: 6px;
+}
+.container2 {
   display: flex;
-  flex-direction: column; /* Alterado de 'space-between' para 'column' para alinhar os itens verticalmente */
-  padding: 3% 15%;
-  background-color: #081f5c;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  padding: 0% 13% 0% 13%;
 }
 
-.info {
-  flex: 1;
-  font-family: Arial, sans-serif;
-  color: #ffffff;
-  margin-bottom: 20px; /* Adicionando margem abaixo para separar do formulário */
+.image-section2 {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+}
+
+.imgblog {
+  width: 100%; /* Ocupa toda a largura */
+  height: auto; /* Mantém a proporção */
+  margin-bottom: 15px; /* Espaço entre imagem e texto */
+}
+
+.text-section2 {
+  width: 100%;
+  padding: 0 10px; /* Espaçamento interno para evitar bordas coladas */
+}
+
+.text-section2 h1 {
+  font-size: 1.2rem; /* Ajusta tamanho do título */
+  margin-bottom: 10px;
+}
+
+.text-section2 p {
+  font-size: 0.9rem; /* Ajusta tamanho do texto */
+  line-height: 1.4; /* Melhora espaçamento */
+  width: 90%;
+}
+.meio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 13%;
 }
 
 .formulario {
-  flex: 1;
-  font-family: Arial, sans-serif;
-  background-color: #b9cbdd;
-  padding: 3% 15% 5% 8%;
-  border-radius: 10px;
-  box-shadow: 05px 7px 20px #b9cbdd;
-  margin-left: 0;
+  order: -1; /* Move o formulário para cima */
+  width: 80%;
 }
 
-.formulario h2 {
-  font-family: "Montserrat", sans-serif;
-  color: #384584;
-  margin-bottom: 15px;
-  font-size: 1rem;
-  padding: 0% 0% 3% 0%;
-  align-items: center;
-}
-
-.formulario label {
-  display: block;
-  margin: 10px 0 5px;
-}
-
-.formulario input,
-.formulario button {
-  width: 96%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  font-size: 1rem;
-}
-
-.mensagem {
-  width: 96%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  font-size: 1rem;
-}
-
-.formulario button {
-  background-color: #384584;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.3s;
+.info {
   width: 100%;
 }
 
-.formulario button:hover {
-  background-color: #0d6dce;
+.formulario form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* Espaçamento entre os campos */
 }
 
-
-@media all and (max-width: 820px) {
-  .meio {
-    padding: 3% 10%; /* Ajustando o padding para telas menores */
-  }
-  
-  .info {
-    margin-bottom: 20px; /* Mantendo o espaço abaixo da informação */
-  }
-  
-  .formulario {
-    margin-left: 0; /* Removendo margem para centralizar o formulário */
-  }
+.formulario input,
+.formulario textarea,
+.formulario button {
+  width: 80%;
+  padding: 8px;
+  font-size: 0.9rem;
 }
 
+.info p {
+  font-size: 0.8rem;
+  line-height: 1.4;
+}
+}
+
+@media (max-width: 425px) {
+
+  .a-menu {
+    font-size: 0.5rem;
+    margin: 0; /* Remove margens desnecessárias */
+    text-decoration: none;
+    color: #333;
+    padding: 8px 12px;
+    transition: all 0.3s ease;
+    align-items: center;
+    
+  }
+ .logo{
+  width: 20%;
+  padding: 0% 0% 0% -20%;
+  margin: 0%;
+ }
+ p.bannerin{
+  font-size: 1rem;
+  padding: 0% 25% 0% 25%;
+  align-items: center;
+
+ }
+ p.bannerin1{
+  font-size: 1rem;
+  padding: 0% 20% 0% 20%;
+  align-items: center;
+
+ }
+ .imgprinc{
+  align-items: center;
+  width: 50%;
+ }
+ h1.h1text{
+  font-size: 1rem;
+  align-items: center;
+ }
+p.principal{
+  font-size: 0.9rem;
+  padding: 0%;
+  margin: 0%;
+  align-items: center;
+  flex-direction: column;
+}
+  .img1 {
+    visibility: hidden;
+  }
+
+ .tituloprincipal2, .bannerin,.cardimg, .cardtext, .h1text, .principal, .meublog,.blo ,.baixoclass, .servicos, .centro, .image-section2{
+  visibility: visible;
+}
+ .tituloprincipal2 {
+    font-size: 1rem !important; 
+    line-height: 1.3 !important;
+    padding: 0% 20% 0% 20% !important;
+
+  }
+
+  .bannerin {
+    font-size: 0.8rem !important;
+    padding: 0 5% !important;
+  }
+
+  .oi {
+    max-width: 95% !important;
+    text-align: center !important;
+  }
+  .navbar ul {
+    padding: 0.5rem;
+    position: relative;
+    left: -70px;
+    top: 50%;
+   
+  }
+
+  .navbar a {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  .navbar a span {
+    font-size: 0.8rem;
+  }
+h2.cardh{
+  font-size: 0.8rem !important;
+}
+p.cardtext{
+  font-size: 0.8rem !important;
+  padding: 0% 0% 5% 0%;
+}
+.card{
+  width: 50%;
+  padding: 8% 8% 0% 8%;
+  align-items: center;
+}
+.cardimg {
+  width: 100% !important;
+  height: auto !important; /* Mantém a proporção */
+  display: block; /* Evita espaços extras */
+  object-fit: contain; /* Ajusta sem cortar */
+  align-items: center;
+}
+.cta-button {
+  width: 50%; /* Mais largo em telas pequenas */
+  font-size: 0.8rem;
+  padding: 6px;
+}
+.container2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  padding: 0% 13% 0% 13%;
+}
+
+.image-section2 {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+}
+
+.imgblog {
+  width: 100%; /* Ocupa toda a largura */
+  height: auto; /* Mantém a proporção */
+  margin-bottom: 15px; /* Espaço entre imagem e texto */
+}
+
+.text-section2 {
+  width: 100%;
+  padding: 0 10px; /* Espaçamento interno para evitar bordas coladas */
+}
+
+.text-section2 h1 {
+  font-size: 1.2rem; /* Ajusta tamanho do título */
+  margin-bottom: 10px;
+}
+
+.text-section2 p {
+  font-size: 0.9rem; /* Ajusta tamanho do texto */
+  line-height: 1.4; /* Melhora espaçamento */
+  width: 90%;
+}
+.meio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 13%;
+}
+
+.formulario {
+  order: -1; /* Move o formulário para cima */
+  width: 80%;
+}
+
+.info {
+  width: 100%;
+}
+
+.formulario form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* Espaçamento entre os campos */
+}
+
+.formulario input,
+.formulario textarea,
+.formulario button {
+  width: 80%;
+  padding: 8px;
+  font-size: 0.9rem;
+}
+
+.info p {
+  font-size: 0.8rem;
+  line-height: 1.4;
+}
 }
